Add plotly & add graph to single view circuit page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"],
       "@components/*": ["./components/*"],
+      "@componentslazy/*": ["./componentslazy/*"],
       "@layouts/*": ["./layouts/*"],
       "@pages/*": ["./pages/*"],
       "@store/*": ["./store/*"],
