--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.25.3",
     "nuxt": "^2.17.0",
     "vue": "^2.7.10",
+    "vue-plotly": "^1.1.0",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
